# servipalbackend

./: .env  .gitignore  Dockerfile  README_LOAD_TESTING.md  VIDEO_CONVERSION_README.md  appwrite.json  docker-compose.yml  load_test_config.py  locustfile.py  pyproject.toml  pytest.ini  requirements.txt  run_comprehensive_tests.py  run_dramatiq_worker.py  run_load_test.py  run_tests.py  simple_locustfile.py  simple_test.py  test_dramatiq.py  test_simple.py  test_video_integration.py
.github/workflows/: deploy.yml  docker-ci.yml
app/: main.py  templates.py  templating.py
app/auth/: auth.py
app/config/: config.py
app/database/: database.py
app/models/: materialize_model.py  models.py
app/queue/: base_consumer.py  connection.py  notification_consumer.py  notification_queue.py  order_consumer.py  order_status_queue.py  producer.py  rabbitmq.py  wallet_consumer.py  wallet_queue.py
app/routes/: audit_log_routes.py  auth_routes.py  item_routes.py  marketplace_routes.py  notification_routes.py  order_routes.py  payment_routes.py  product_routes.py  report_routes.py  review_routes.py  settings_routes.py  stats_routes.py  user_routes.py  ws_routes.py
app/schemas/: audit_logs.py  delivery_schemas.py  item_schemas.py  marketplace_schemas.py  notification_schemas.py  order_schema.py  product_schemas.py  queue_schemas.py  review_schema.py  schemas.py  settings_schema.py  stats_schema.py  (+3 more)
logs/: cron_jobs.log.1  cron_jobs.log.2  cron_jobs.log.3  cron_jobs.log.4  cron_jobs.log.5
migration/: env.py
migrations/: env.py
supervisor/: transaction_worker.conf
(+128 files in other folders)
